Updated backend and frontend - fixed configs and removed unnecessary files